# flab-decode-jackpot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  main.py  pyproject.toml  test_date_validation.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
app/: __init__.py  config.py  exceptions.py  validators.py
app/data/: result_Grand_Lotto_6-55_20251018.json  result_Grand_Lotto_6-55_20251019.json  result_Grand_Lotto_6-55_20251020.json  result_Grand_Lotto_6-55_20251029.json  result_Grand_Lotto_6-55_20251031.json  result_Lotto_6-42_20251017.json  result_Lotto_6-42_20251018.json  result_Lotto_6-42_20251029.json  result_Lotto_6-42_20251101.json  result_Lotto_6-42_20251119.json  result_Mega_Lotto_6-45_20251018.json  result_Mega_Lotto_6-45_20251101.json  result_Mega_Lotto_6-45_20260215.json  result_Super_Lotto_6-49_20251018.json  result_Super_Lotto_6-49_20251101.json  result_Super_Lotto_6-49_20260212.json  result_Ultra_Lotto_6-58_20251017.json  result_Ultra_Lotto_6-58_20251024.json  result_Ultra_Lotto_6-58_20251029.json  result_Ultra_Lotto_6-58_20251101.json  result_Ultra_Lotto_6-58_20260115.json
app/modules/: __init__.py  accuracy_analyzer.py  ai_analyzer.py  analyzer.py  progress_tracker.py  scraper.py
app/templates/: 404.html  (+6 more)
docs/: ACCURACY_ANALYSIS.md  ACCURACY_IMPLEMENTATION.md  ACCURACY_QUICKSTART.md  AI_INSTRUCTIONS.md  AI_SETUP.md  API_REFERENCE.md  ARCHITECTURE.md  CODE_IMPROVEMENTS.md  DATE_RANGE_FIX.md  DEVELOPER_GUIDE.md  PROGRESS_CLEANUP.md  PROJECT_SUMMARY.md  README.md  START_HERE.md
scripts/: cleanup_progress.py
(+37 files in other folders)
