[project]
name = "flab-decode-jackpot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.2",
    "flask-limiter>=4.1.1",
    "numpy>=2.3.4",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "selenium>=4.36.0",
    "webdriver-manager>=4.0.2",
]
